--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Now do a search for
 
 Do you see the difference?<br><br>
 
-Shuffle Search takes a 2-, 3-, or 4-word queries and creates a list of all possible orders for those query words, and then generates clickable Google searches for all of them. <br><br>
+Shuffle Search takes a 2-, 3-, or 4-word query and creates a list of all possible orders for those query words, and then generates clickable Google searches for all of them. <br><br>
 
 <b>Two words:</b> two possible searches <br><br>
 <b>Three words:</b> six possible searches <br><br>
